--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,11 +78,11 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     //fresco
     compile 'com.facebook.fresco:fresco:1.8.0'
+//    compile 'com.github.CarGuo:FrescoUtils:v1.2.1'
     //BRVAH
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'com.github.magiepooh:recycler-itemdecoration:1.1.1@aar'
     //logger
     compile 'com.orhanobut:logger:2.1.1'
-    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile project(':SerialPortLibrary')
 }
