--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,13 @@ dependencies {
     //fresco
     compile 'com.facebook.fresco:fresco:1.8.0'
 //    compile 'com.github.CarGuo:FrescoUtils:v1.2.1'
+    //MPChart
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    //NiceSpinner
+    compile 'com.github.arcadefire:nice-spinner:1.3.1'
+    //NCalendar
+    compile 'com.necer.ncalendar:ncalendar:2.4.5'
+
     //BRVAH
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'com.github.magiepooh:recycler-itemdecoration:1.1.1@aar'
