--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        multiDexEnabled true
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [ moduleName : project.getName() ]
@@ -83,8 +83,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     //NiceSpinner
     compile 'com.github.arcadefire:nice-spinner:1.3.1'
-    //NCalendar
-    compile 'com.necer.ncalendar:ncalendar:2.4.5'
+
 
     //BRVAH
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
