--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
                 arguments = [moduleName: project.getName()]
             }
         }
+
+       /* ndk { //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+             abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","arm64-v8a","x86_64" }*/
     }
 
     compileOptions {
@@ -105,4 +108,8 @@ dependencies {
     //youmeng
     compile 'com.umeng.sdk:common:1.5.0'
     compile 'com.umeng.sdk:analytics:7.5.0'
+
+    //baidumap
+    //location
+    compile 'com.amap.api:location:latest.integration'
 }
